@@ -1,6 +1,7 @@
 #ifndef UI_EDIT_CYCLIC_TIMER_HPP
 #define UI_EDIT_CYCLIC_TIMER_HPP
 
+#include <QLabel>
 #include <QString>
 #include <QDialog>
 #include <QSlider>
@@ -9,33 +10,40 @@
 #include <QPushButton>
 #include <QKeySequence>
 #include <QKeySequenceEdit>
+#include "CyclicTimerSpec.hpp"
+#include "CyclicTimerData.hpp"
 
-/* Period
- * Start at
- * Terminate at
- * Sound
- * Volume
- * Hotkey
- */
 class UiEditCyclicTimer : public QDialog
 {
   public:
-    UiEditCyclicTimer();
+    explicit UiEditCyclicTimer(CyclicTimerSpec* spec);
     ~UiEditCyclicTimer();
-    static bool newCyclicTimer();
+    static CyclicTimerData* newCyclicTimer(CyclicTimerSpec* spec);
+    static CyclicTimerData* editCyclictimer(CyclicTimerSpec* spec);
 
   private:
+    void checkStart();
+    void checkTerminate();
     void buttonMoreClicked();
+    void adjustPeriodLabel(int seconds);
+    void adjustStartLabel(int seconds);
+    void adjustTerminateLabel(int seconds);
+    void adjustVolumeLabel(int percent);
 
     bool Collapsed;
+    QKeySequenceEdit* EditKeySequence;
+    QPushButton* ButtonClear;
     QPushButton* ButtonMore;
     QGroupBox* AdvancedBox;
-    QSlider* SliderStart;
+    QComboBox* ComboSound;
     QSlider* SliderTerminate;
     QSlider* SliderPeriod;
     QSlider* SliderVolume;
-    QComboBox* ComboSound;
-    QKeySequenceEdit* EditKeySequence;
+    QSlider* SliderStart;
+    QLabel* LabelTerminate;
+    QLabel* LabelPeriod;
+    QLabel* LabelVolume;
+    QLabel* LabelStart;
 };
 
 #define BUTTON_MORE_TEXT "More..."
